--- a/src/geopd/templates/base/navbar.html
+++ b/src/geopd/templates/base/navbar.html
@@ -30,7 +30,7 @@
                 {{ nav_item('/projects/', 'Projects') }}
                 {{ nav_item('/publications/', 'Publications') }}
                 {{ nav_item('/cores/', 'Cores') }}
-                {{ nav_item('/members/', 'Members') }}
+                {{ nav_item('/users/', 'Members') }}
                 {% if current_user.is_anonymous %}
                     {{ nav_item('/contact/', 'Contact Us') }}
                 {% endif %}
